--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       tirages.forEach((t, index) => {
         const html = `
           <div class="result-box text-start">
-            <h5>Tirage ${index + 1} - ${t.nom}</h5>
+            <h5>Tirage ${index + 1}</h5>
             <p>${t.lettreNom} ${t.verset}</p>
             <p>Psaumes 119.${t.passage}</p>
           </div>
