--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h5>Tirage ${index + 1}</h5>
             <p>${t.lettreNom} ${t.verset}</p>
             <p>Psaumes 119.${t.passage}</p>
-            <p><strong>Texte du verset :</strong> ${t.texteVerset}</p>
+            <p><strong>Texte du verset :</strong><br> ${t.texteVerset}</p>
           </div>
         `;
         container.innerHTML += html;
